<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/view_artwork_device"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@+id/view_artwork_download"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_artwork_folder"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fillColor="?attr/colorOnSurface"
                android:text="@string/fragment_edit_artwork_folder"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_artwork_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@+id/view_artwork_delete"
            app:layout_constraintStart_toEndOf="@+id/view_artwork_device"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_artwork_download"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fillColor="?attr/colorOnSurface"
                android:text="@string/fragment_edit_artwork_download"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_artwork_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_artwork_download"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_artwork_delete"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fillColor="?attr/colorOnSurface"
                android:text="@string/fragment_edit_artwork_delete"/>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>